force-app/main/default/objects/PDRI__TestTemplate__c/PDRI__TestTemplate__c.object-meta.xml
<CustomObject>
    <label>Test Template</label>
    <nameField>
        <label>Test Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>