force-app/main/default/objects/PDRI__TestTemplate__c/fields/PDRI__ApprovalLookupField__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ApprovalLookupField__c</fullName>
    <label>Approval Lookup Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>