force-app/main/default/objects/PDRI__TestTemplate__c/fields/PDRI__ManagedEnvironment__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ManagedEnvironment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Environment</label>
    <referenceTo>PDRI__Managed_Environment__c</referenceTo>
    <relationshipLabel>Test Templates</relationshipLabel>
    <relationshipName>Test_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>