force-app/main/default/objects/PDRI__TestTemplate__c/fields/PDRI__Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Type__c</fullName>
    <defaultValue>&apos;Quote&apos;</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>