force-app/main/default/objects/PDRI__TestTemplate__c/listViews/PDRI__All.listView-meta.xml
<ListView>
    <fullName>PDRI__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>